[workspace]
members = [
    "paxy",
    "paxy_build"
]

# Keys that can be (optionally) inherited by workspace members
[workspace.package]
version = "0.0.1"
authors = [
    "shivanandvp <shivanandvp.oss@gmail.com, shivanandvp@rebornos.org>",
    "lylythechosenone",
    "flyingcakes85",
]
edition = "2021"
description = "A package manager that gets out of your way"
documentation = "https://paxyhub.github.io/paxy"
readme = "https://github.com/PaxyHub/paxy#readme"
homepage = "https://paxyhub.github.io/"
repository = "https://github.com/PaxyHub/paxy.git"
license = "MPL-2.0"
keywords = ["package", "package-manager", "paxy", "packager"]
categories = ["development-tools::build-utils"]
exclude = [".github", ".vscode", "*.code-workspace"]
