[workspace]
members = [
    "paxy",
    "paxy-cli",
    "paxy-gui", "paxy-plugin",
    "tests"
]
default-members = [
    "paxy",
    "paxy-cli",
    "paxy-gui",
    "tests"
]
resolver = "1"

[workspace.package]

version = "0.0.1"
description = "A package manager that gets out of your way"
repository = "https://github.com/pax-hub/paxy.git"
homepage = "https://pax-hub.github.io/"
authors = [
    "shivanandvp <pvshvp.oss@gmail.com, shivanandvp@rebornos.org>",
    "lylythechosenone",
    "Ishaan S <ishaans.code@gmail.com>",
    "flyingcakes85",
]
keywords = ["package", "package-manager", "paxy", "packager"]
exclude = [".github", ".vscode", "*.code-workspace"]
categories = ["development-tools::build-utils"]
documentation = "https://pax-hub.github.io/paxy"
readme = "https://github.com/pax-hub/paxy#readme"
edition = "2021"
license = "MPL-2.0"


[workspace.dependencies]

paxy = { path = "paxy" }

# Logging
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"

# Configuration
figment = "0.10"

# Filesystem
directories = "5.0"

# Error handling
snafu = "0.8"

# Data
lazy_static = "1.4"
semver = {git = "https://github.com/FerrisWasTaken/semver.git", features = ["extism_support"]}
serde = { version = "1.0.200", features = ["derive"] }
serde-aux = "4.5"
serde_yaml = "0.9"
tracing-serde = "0.1"
speedy = "0.8"
log = "0.4"

# Internationalization
fluent = "0.16"

# CLI
clap = { version = "4.5", features = ["derive", "wrap_help"] }
clap-verbosity-flag = "2.2"
anstream = "0.6"
owo-colors = "4.0"
console = "0.15"

# GUI
relm4 = "0.8"
relm4-components = "0.8"