[package]
name = "paxy"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
exclude.workspace = true
categories = ["development-tools::build-utils", "command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive", "help"] }
pollster = "0.3"
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
snafu = "0.7"
url = { version = "2.3", features = ["serde"] }
