[package]

name = "paxy"
version.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
exclude.workspace = true
categories = ["development-tools::build-utils"]
documentation.workspace = true
readme.workspace = true
edition.workspace = true


[dependencies]

# Logging
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
log = { workspace = true, features = ["serde"] }

# Configuration
figment = { workspace = true, features = ["toml", "json", "yaml", "env"] }

# Filesystem
directories = { workspace = true }

# Error handling
snafu = {workspace = true}

# Data
lazy_static = { workspace = true }
serde = { workspace = true }
serde-aux = { workspace = true }
serde_yaml = { workspace = true }
tracing-serde = { workspace = true }
speedy = { workspace = true }
itertools = { workspace = true }

# Internationalization
fluent = { workspace = true }

# CLI
clap = { workspace = true }
clap-verbosity-flag = { workspace = true }
anstream = { workspace = true }
owo-colors = { workspace = true, features = ["supports-colors"]}
console = { workspace = true }

# Miscellaneous
home = "0.5.9"
toml = "0.8.10"
pollster = "0.3"
reqwest = "0.12"
url = { version = "2.3", features = ["serde"] }
extism = "1.2.0"
bson = "2.9.0"
git2 = {version = "0.18.3", default-features = false, features = ["https"]}

[dev-dependencies]
serial_test = "3.1.1"