[package]
name = "paxy_build"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
exclude.workspace = true
categories.workspace = true

[dependencies]
snafu = "0.7"
serde = { version = "1.0", features = ["derive"] }
url = { version = "2.3.1", features = ["serde"] }

[features]
default = ["nested_building"]
nested_building = []