[package]
name = "paxy_build"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
exclude.workspace = true
categories.workspace = true

[dependencies]
snafu = "0.7"
walkdir = "2"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
toml = "0.5"
ron = "0.8"
url = { version = "2.3", features = ["serde"] }

[features]
default = ["nested_building"]
nested_building = []